Fix horizontal scroll

--- a/client/users/albums_root/albums_root.styl
+++ b/client/users/albums_root/albums_root.styl
@@ -2,11 +2,11 @@
 
 .user-albumlist
   padding 0
-  margin-right -20px
+  margin-left -20px
 
 .user-albumlist__item
   display inline-block
-  margin-right 20px
+  margin-left 20px
   margin-bottom 30px
 
 .user-albumlist__item-meta
